--- a/Maria/style2.css
+++ b/Maria/style2.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .box {
@@ -13,6 +14,9 @@ body {
 
 .col1 {
     min-width: 30%;
+    background-image: url(/Maria/pics/20210502_152133.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .col2 {
@@ -28,6 +32,9 @@ body {
 
 .box2 {
     min-height: 30%;
+    background-image: url(/Maria/pics/VideoCapture_20210812-134717.jpg);
+    background-size: contain;
+    background-position: center;
 }
 
 .box1 {
@@ -39,6 +46,9 @@ body {
 .box4 {
     min-width: 30%;
     height: 100%;
+    background-image: url(/Maria/pics/20210502_085644.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .box3 {
@@ -52,6 +62,9 @@ body {
 .box6 {
     min-height: 50%;
     width: 100%;
+    background-image: url(/Maria/pics/20210908_230610.jpg);
+    background-size: contain;
+    background-position: center;
 }
 
 .box5 {
@@ -66,9 +79,14 @@ body {
     height: 100%;
 }
 
-.test {
-    display: flex;
-    width: 100%;
-    /* justify-content: space-between; */
-    align-items: center;
+.box7 {
+    background-image: url(/Maria/pics/20210913_170232.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.box8 {
+    background-image: url(/Maria/pics/20210916_081148.jpg);
+    background-size: cover;
+    background-position: center;
 }
